# cookiecutter-package

./: README.md  cookiecutter.json
{{ cookiecutter.project_slug }}/: .gitignore  .pre-commit-config.yaml  README.md  mypy.ini  pyproject.toml
{{ cookiecutter.project_slug }}/requirements/: base.txt  dev.txt
{{ cookiecutter.project_slug }}/src/{{ cookiecutter.package_name }}/: {% if cookiecutter.command_line_interface != "No command-line interface" %}cli.py{% endif %}
