[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "{{ cookiecutter.project_slug }}"
version = "{{ cookiecutter.version }}"
description = "{{ cookiecutter.project_short_description }}"
authors = [
    {name = "{{ cookiecutter.full_name }}", email = "{{ cookiecutter.email }}"}
]
readme = "README.md"
requires-python = "{{ cookiecutter.requires_python }}"
license = {text = "{{ cookiecutter.license }}"}
dynamic = ["dependencies"]
{% if cookiecutter.command_line_interface != "No command-line interface" %}

[project.scripts]
{{ cookiecutter.package_name }} = "{{ cookiecutter.package_name }}.cli:main"
{% endif %}

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.dynamic]
dependencies = { file = "requirements/base.txt" }

[tool.ruff]
lint.select = ["ALL", "E302"]
line-length=120
lint.ignore = [
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D107",
    "N818",
    "D213",
    "D211",
    "S311",
    "FIX002",
    "TD003",
    "CPY001",
]
preview = true
